--- a/ASPColoradoBestCars/ASPColoradoBestCars.csproj
+++ b/ASPColoradoBestCars/ASPColoradoBestCars.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="RestSharp" Version="106.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Videos\" />
+  </ItemGroup>
+
 </Project>
